Fix slider arrow z-index issue

--- a/styles/components/_home_slider.scss
+++ b/styles/components/_home_slider.scss
@@ -77,6 +77,7 @@ section.home-slider {
     text-align: center;
     line-height: 57px;
     cursor: pointer;
+    z-index: 200000;
   }
 
   .arrow-prev {
